// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueueList failure 1`] = `
<div>
  <h3>
    Queues
  </h3>
  <div
    className="alert alert-danger"
    role="alert"
  >
    some error message
  </div>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Message Count
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colSpan="3"
        >
          Loading...
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`QueueList loading 1`] = `
<div>
  <h3>
    Queues
  </h3>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Message Count
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colSpan="3"
        >
          Loading...
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`QueueList success 1`] = `
<div>
  <h3>
    Queues
  </h3>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Message Count
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          default
        </td>
        <td>
          0
        </td>
        <td>
          <button
            className="btn btn-sm btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Purge
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
